--- a/css/cover.css
+++ b/css/cover.css
@@ -27,12 +27,13 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  background-color: #cccccc;
 }
 body {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
+  background-image: url("../img/backGround.jpg");
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
