--- a/css/carousel.css
+++ b/css/carousel.css
@@ -41,10 +41,14 @@ body {
 .carousel {
   height: 500px;
   margin-bottom: 60px;
+
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
+  font: Arial Black;
+  color: white;
+  text-shadow: 4px 4px 6px black;
 }
 
 /* Declare heights because of positioning of img element */
