Added files via upload

--- a/css/cover.css
+++ b/css/cover.css
@@ -33,7 +33,7 @@ body {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
-  background-image: url("../img/backGround.jpg");
+  background-image: url("../img/backGround.jpg");  /*Photo provided by: "http://www.blogcdn.com/blog.moviefone.com/media/2010/05/tr.jpg" */
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
