--- a/rekall-master/css/carousel.css
+++ b/rekall-master/css/carousel.css
@@ -4,7 +4,7 @@
 
 body {
   padding-bottom: 40px;
-  color: #5a5a5a;
+  color: black;
 }
 
 
@@ -47,8 +47,14 @@ body {
 .carousel-caption {
   z-index: 10;
   font: Arial Black;
-  color: white;
-  text-shadow: 4px 4px 6px black;
+  color: black;
+  text-shadow: text-shadow:
+   -1px -1px 0 white,  
+    1px -1px 0 white,
+    -1px 1px 0 white,
+     1px 1px 0 white;
+  background:  rgba(195, 195, 195, 0.7);
+  border-radius: 25px;
 }
 
 /* Declare heights because of positioning of img element */
@@ -69,6 +75,7 @@ body {
 -------------------------------------------------- */
 
 /* Center align the text within the three columns below the carousel */
+
 .marketing .col-lg-4 {
   margin-bottom: 20px;
   text-align: center;
@@ -76,12 +83,17 @@ body {
 .marketing h2 {
   font-weight: normal;
 }
-.marketing .col-lg-4 p {
+.marketing .col-lg-4 .details-1 .details-2 .details-3 p{
   margin-right: 10px;
   margin-left: 10px;
 }
-
-
+h3 {
+	text-align: center;
+}
+h4{
+	text-align: center;
+	color: #2E6DA4;
+}
 /* Featurettes
 ------------------------- */
 
